--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "massive": "^5.1.3",
+    "npm": "^6.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
@@ -18,5 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "main": "./server/server.js",
+  "proxy": "http://localhost:4002"
 }
